--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,11 +5,16 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "duckdb>=1.3.1",
     "openpyxl>=3.1.5",
     "pandas>=2.2.3",
+    "pandas-stubs>=2.2.3.250527",
     "streamlit>=1.45.1",
 ]
 
-[tool.pyright]
+[tool.basedpyright]
 venvPath = "."
 venv = ".venv"
+
+[tool.ruff]
+lint.extend-select = ["I"]
